Fix navbar squishing
Set flex-wrap, adjusted row-gap, changed font-size on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -81,6 +81,7 @@ a {
   body {
     background-size: auto 150%;
     background-position: right;
+    font-size: small;
   }
 }
 
